src/test/scala/au/edu/mq/comp/perentiemq/iml/funcerr1.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/funcerr1.iml:1:1: error: function definition expected

^

